# game-engine

./: .gitignore  CMakeLists.txt
.github/: README.md
shaders/: fragment.glsl  vertex.glsl
src/: main.c
